# rowland-geometry

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/rowland_geometry/: __init__.py  analyzer.py  crystals.py  rowland_circle.py
tests/: test_rowland_geometry.py
